testdata/baselines/reference/submodule/compiler/jsdocRestParameter.errors.txt
/a.js(8,6): error TS2554: Expected 1 arguments, but got 2.
/a.js(9,6): error TS2554: Expected 1 arguments, but got 2.


==== /a.js (2 errors) ====
    /** @param {...number} a */
    function f(a) {
        a; // number | undefined
        // Ideally this would be a number. But currently checker.ts has only one `argumentsSymbol`, so it's `any`.
        arguments[0];
    }
    f([1, 2]); // Error
    f(1, "2"); // Error
         ~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    f(1, 2);
         ~
!!! error TS2554: Expected 1 arguments, but got 2.
    